# hx9-control-system

./: README.md  package-lock.json  package.json
.github/: control-station.yml  pod-operation.yml
.github/workflows/: control-station.yml  pod-operation.yml  run-checks.yml
control-station/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710147238997-bf19f7bc2460f.mjs
control-station/src/: App.tsx  index.css
control-station/src/components/: index.ts
control-station/src/interfaces/: SensorData.ts
control-station/src/services/: PodContext.ts  PodSocketClient.ts  SocketFunctions.ts  socketHandler.ts  usePodData.tsx
control-station/src/views/: index.ts
controlstation/: package-lock.json  package.json
controlstation/public/: index.html
controlstation/src/Components/: App.jsx  style.css
fsmtemp/: index.js  package-lock.json  package.json
pod/: README.md
pod-operation/: Cargo.toml  README.md  hx_wheel_encodeer  hx_wheel_encodeer.rs  package.json  wheel_encoder.rs
pod-operation/.cargo/: config.toml
pod-operation/src/: ads1015.rs  demo.rs  handlers.rs  main.rs  state.rs  state_machine.rs
pod-operation/src/components/: brakes.rs  gyro.rs  hall_effect.rs  high_voltage_system.rs  ina219.rs  inverter_board.rs  lidar.rs  lim_current.rs  lim_temperature.rs  mod.rs  motors.rs  pressure_transducer.rs  signal_light.rs  vesc.rs  wheel_encoder.rs  wheel_encoder_full_resolution.rs
pod-operation/src/utils/: gpio.rs  mock.rs  mod.rs
(+74 files in other folders)
