[package]
name = "pod-operation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = "0.7.3"
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
enum-map = "2.7.3"
once_cell = "1.19.0"

rppal = { version = "0.17.1", features = ["hal"] }
ina219 = "0.1.0"
ads1x1x = "0.2.2"
nb = "1.1.0"
mpu6050 = "0.1.6"
